--- a/fansite1.html
+++ b/fansite1.html
@@ -139,7 +139,7 @@
 
 
             <div class="bas" id="sociale"><h2>Réseaux Sociaux</h2></div>
-            <section class="Réseaux">
+            <section class="reseau">
                     <a href="https://www.snapchat.com/add/binkszola" target="_blank"><img src="img/logo snap.png" alt="Logo Snapchat" class="res"></a>
                     <a href="https://www.instagram.com/binkszola/" target="_blank"><img src="img/logo insta.png" alt="Logo Instagram" class="res"></a>
                     <a href="https://www.youtube.com/channel/UCz_lud52KfAbVTanpedusUw" target="_blank"><img src="img/logo youtube.png" alt="Logo Youtube" class="res"></a>
