--- a/fansite1.html
+++ b/fansite1.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <header">
+    <header>
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -151,11 +151,6 @@
         </div>
     </main>
 
-
-
-
-
-    
     <footer>
         <nav class="navbar2">
             <ul>
